# noia

./: .gitignore  CONTRIBUTING.md  README.md  noia.sln  package.json  tailwind.config.js  webpack.config.js
.cursor/rules/: Electron.mdc  ReactNative.mdc  Rust.mdc  allfiles.mdc
noia/: App.axaml  App.axaml.cs  AppSettings.cs  Icons.axaml  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  SettingsManager.cs  app.manifest  noia.csproj
noia/Helpers/: MemoryReader.cs  ModuleAdresses.cs  ModuleHelper.cs  ProcessHelper.cs
noia/ViewModels/: ProcessViewModel.cs
noia/Views/: HomeView.axaml  HomeView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  SettingsView.axaml  SettingsView.axaml.cs  SkillsView.axaml  SkillsView.axaml.cs
src/main/: main.js  preload.js
src/renderer/: App.js  index.html  index.js  styles.css
src/renderer/components/: Dashboard.js  HomePage.js  ProcessScanner.js  TitleBar.js
src/renderer/components/dashboard/: DashboardContent.js  DashboardMenu.js
src/renderer/components/dashboard/pages/: CodeEditor.js  Home.js  Settings.js
src/renderer/styles/: App.css  animations.css  base.css  main.css
src/renderer/styles/components/: dashboard.css  home.css  process-scanner.css  title-bar.css
src/renderer/styles/components/dashboard/: dashboard-content.css  dashboard-menu.css
src/rust/: .npmignore  Cargo.toml  index.d.ts  index.js  package.json
src/rust/src/: lib.rs
src/rust/src/language/: ast.rs  error.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs
src/rust/src/language/types/: mod.rs
(+2 files in other folders)
