[package]
name = "noia-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.12.2"
napi-derive = "2.12.2"
sysinfo = "0.28.4"  # For cross-platform process monitoring
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.0.1" 